# validate-actions

./: .flake8  .gitignore  .gitingore  DEV_README.md  README.md  pyproject.toml  results.json
.github-test/workflows/: node.js.yml
.github/workflows/: docs.yml  node.js.yml  pr.yaml  push.yaml
actions-api/: Issue.py  linter.py  main.py  parser.py  yaml_parser.py
actions-api/actions_errors/: event_trigger.py
docs/: conf.py  index.rst
resources/: node.js.yml  popular_actions.json
scripts/: download_top_100_workflows.py  first_run_results.json  parse_popular_actions.py  popular_actions_in.json  test_official_workflows.py  test_top_100_workflows.py  top-100-repos-filtered.json
tests/: cli_test.py  conftest.py  e2e_test.py  fixer_test.py  helper.py  pipeline_test.py  validation_service_test.py
tests/building_test/: marketplace_enricher_test.py
tests/e2e/: buggy_official_workflows.md  test_cli_workflows.py  test_fix_mode.py  test_official_workflows.py
tests/integration/: test_cli.py  test_main.py  test_pipeline.py
tests/performance/: test_parsing_performance.py
tests/pipeline_stages_test/: extensible_validator_test.py
tests/resources/: invalid_workflow.yml  outdated_actions_workflow.yml  valid_workflow.yml  warning_workflow.yml
validate-actions/: cli.py  linter.py  main.py
validate_actions/: __init__.py  cli.py  fixer.py  job_orderer.py  lint_problem.py  linter.py  main.py  parse.py  pipeline.py  pos.py  problems.py  refactor.md  validator.py  workflow_ast.py  workflow_factory.py
validateactions/: cli.py  linter.py  main.py  parser.py
(+126 files in other folders)
