[project]
name = "actions-api"
version = "0.1.0"
description = "API for github actions workflow validation"
authors = [
    {name = "konradhorber",email = "konrad.horber@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.15.2,<0.16.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "yamllint (>=1.35.1,<2.0.0)"
]

[tool.poetry]
packages = [
    { include = "actions-api" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
