[project]
name = "validate-actions"
version = "0.1.0"
description = "CLI for github actions workflow validation"
authors = [
    {name = "konradhorber",email = "konrad.horber@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.15.2,<0.16.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
]

[tool.poetry]
packages = [
    { include="validateactions" }
]

[tool.pytest.ini_options]
pythonpath = [
  "validateactions"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
